sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:11: error: not found: value lim
	}while(lim > 0)
               ^