sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	do{
		var lim = getNombreValeurs()-2;
		for(i<-0 to lim) {
			if(plusPetit(i+1, i)) {
				echange(i, i+1);
				lim = lim-1;
			}
		}
	}while(lim > 0)
}
